--- a/config-testnet.json
+++ b/config-testnet.json
@@ -9,14 +9,14 @@
     "SideChainId": 318,
     "RestURL": "https://barnard-seed.starcoin.org",
     "ChainId": 253,
-    "CCScriptModule": "0x2d81a0427d64ff61b11ede9085efa5ad::CrossChainScript",
-    "CCMModule": "0x2d81a0427d64ff61b11ede9085efa5ad::CrossChainScript",
-    "CCDModule": "0x2d81a0427d64ff61b11ede9085efa5ad::CrossChainScript",
-    "CrossChainEventAddress": "0x2d81a0427d64ff61b11ede9085efa5ad",
-    "CrossChainEventTypeTag": "0x2d81a0427d64ff61b11ede9085efa5ad::CrossChainManager::CrossChainEvent",
+    "CCScriptModule": "0x18351d311d32201149a4df2a9fc2db8a::CrossChainScript",
+    "CCMModule": "0x18351d311d32201149a4df2a9fc2db8a::CrossChainScript",
+    "CCDModule": "0x18351d311d32201149a4df2a9fc2db8a::CrossChainScript",
+    "CrossChainEventAddress": "0x18351d311d32201149a4df2a9fc2db8a",
+    "CrossChainEventTypeTag": "0x18351d311d32201149a4df2a9fc2db8a::CrossChainManager::CrossChainEvent",
     "PrivateKeys": [
       {
-        "0x2d81a0427d64ff61b11ede9085efa5ad": "${PRIVATE_KEY_2d81a04}"
+        "0x18351d311d32201149a4df2a9fc2db8a": "${PRIVATE_KEY_18351d3}"
       }
     ],
     "BlockConfirmations": 6,
@@ -24,12 +24,15 @@
     "MonitorInterval": 1,
     "MaxGasAmount": 40000000
   },
+  "BridgeURLs": [
+    "https://bridge.poly.network/testnet/v1"
+  ],
   "BoltDbPath": "./db-testnet",
   "MySqlDSN": "${MYSQL_DSN_TESTNET}",
   "RoutineNum": 64,
   "ProxyOrAssetContracts": [
     {
-      "0x2d81a0427d64ff61b11ede9085efa5ad::CrossChainScript": {
+      "0x18351d311d32201149a4df2a9fc2db8a::CrossChainScript": {
         "outbound": [
           1,
           2,
