--- a/config-testnet.json
+++ b/config-testnet.json
@@ -29,7 +29,7 @@
   "BridgeURLs": [
     "https://bridge.poly.network/testnet/v1"
   ],
-  "BoltDbPath": "./db-testnet",
+  "BoltDbPath": "${BOLTDB_PATH}",
   "MySqlDSN": "${MYSQL_DSN_TESTNET}",
   "RoutineNum": 64,
   "CheckFee": true,
