--- a/config-testnet.json
+++ b/config-testnet.json
@@ -9,16 +9,16 @@
     "SideChainId": 318,
     "RestURL": "https://barnard-seed.starcoin.org",
     "ChainId": 251,
-    "CCScriptModule": "0xb6d69dd935edf7f2054acf12eb884df8::CrossChainScript",
-    "CCMModule": "0xb6d69dd935edf7f2054acf12eb884df8::CrossChainScript",
-    "CCDModule": "0xb6d69dd935edf7f2054acf12eb884df8::CrossChainScript",
-    "CrossChainEventAddress": "0xb6d69dd935edf7f2054acf12eb884df8",
-    "CrossChainEventTypeTag": "0xb6d69dd935edf7f2054acf12eb884df8::CrossChainManager::CrossChainEvent",
-    "CCSMTRootResourceType": "0xb6d69dd935edf7f2054acf12eb884df8::CrossChainData::SparseMerkleTreeRoot",
-    "GenesisAccountAddress": "0xb6d69dd935edf7f2054acf12eb884df8",
+    "CCScriptModule": "0x416b32009fe49fcab1d5f2ba0153838f::CrossChainScript",
+    "CCMModule": "0x416b32009fe49fcab1d5f2ba0153838f::CrossChainScript",
+    "CCDModule": "0x416b32009fe49fcab1d5f2ba0153838f::CrossChainScript",
+    "CrossChainEventAddress": "0x416b32009fe49fcab1d5f2ba0153838f",
+    "CrossChainEventTypeTag": "0x416b32009fe49fcab1d5f2ba0153838f::CrossChainManager::CrossChainEvent",
+    "CCSMTRootResourceType": "0x416b32009fe49fcab1d5f2ba0153838f::CrossChainData::SparseMerkleTreeRoot",
+    "GenesisAccountAddress": "0x416b32009fe49fcab1d5f2ba0153838f",
     "PrivateKeys": [
       {
-        "0xb6d69dd935edf7f2054acf12eb884df8": "${PRIVATE_KEY_b6d69dd}"
+        "0x416b32009fe49fcab1d5f2ba0153838f": "${PRIVATE_KEY_416b320}"
       }
     ],
     "BlockConfirmations": 6,
@@ -35,7 +35,7 @@
   "CheckFee": true,
   "ProxyOrAssetContracts": [
     {
-      "0xb6d69dd935edf7f2054acf12eb884df8::CrossChainScript": {
+      "0x416b32009fe49fcab1d5f2ba0153838f::CrossChainScript": {
         "outbound": [
           1,
           2,
