--- a/kube/barnard_starcoin_to_poly-relayer-deployment.yaml
+++ b/kube/barnard_starcoin_to_poly-relayer-deployment.yaml
@@ -31,11 +31,11 @@ spec:
             secretKeyRef:
               name: poly-starcoin-relayer-testnet-sercets
               key: MYSQL_DSN_TESTNET
-        - name: PRIVATE_KEY_b6d69dd
+        - name: PRIVATE_KEY_416b320
           valueFrom:
             secretKeyRef:
               name: poly-starcoin-relayer-testnet-sercets
-              key: PRIVATE_KEY_b6d69dd
+              key: PRIVATE_KEY_416b320
         - name: POLY_WALLET_PASSWORD
           value: "123456"
         - name: POLY_WALLET_FILE
