--- a/config-devnet.json
+++ b/config-devnet.json
@@ -26,10 +26,14 @@
     "MonitorInterval": 1,
     "MaxGasAmount": 40000000,
     "GasSubsidyConfig": {
-      "SubsidyAmount": 10000000,
       "FromChainIds": [
         2
       ],
+      "FromChains": {
+        "2": {
+          "SubsidyAmount": 10000000
+        }
+      },
       "SenderPrivateKeys": [
         {
           "0x18351D311d32201149a4DF2A9fC2db8a": "${PRIVATE_KEY_18351d3}"
