--- a/kube/testnet_poly_to_starcoin-relayer-deployment.yaml
+++ b/kube/testnet_poly_to_starcoin-relayer-deployment.yaml
@@ -15,41 +15,51 @@ spec:
         app: testnet-poly-to-starcoin-relayer
     spec:
       containers:
-      - name: testnet-poly-to-starcoin-relayer
-        image: ghcr.io/elements-studio/poly_starcoin_relayer:sha-f77bf8f
-        ports:
-        - containerPort: 8600
-        env:
-        - name: TO_POLY_DISABLED
-          value: "true"
-        - name: MYSQL_DSN_TESTNET
-          valueFrom:
-            secretKeyRef:
-              name: poly-starcoin-relayer-testnet-sercets
-              key: MYSQL_DSN_TESTNET
-        - name: PRIVATE_KEY_b6d69dd
-          valueFrom:
-            secretKeyRef:
-              name: poly-starcoin-relayer-testnet-sercets
-              key: PRIVATE_KEY_b6d69dd
-        - name: PRIVATE_KEY_18351d3
-          valueFrom:
-            secretKeyRef:
-              name: poly-starcoin-relayer-testnet-sercets
-              key: PRIVATE_KEY_18351d3
-        - name: POLY_WALLET_PASSWORD
-          value: "123456"
-        - name: POLY_WALLET_FILE
-          value: "/etc/polynetwork/poly/wallet.dat"
-        volumeMounts:
-        - name: poly-wallet-file
-          mountPath: "/etc/polynetwork"
-          readOnly: true
+        - name: testnet-poly-to-starcoin-relayer
+          image: ghcr.io/elements-studio/poly_starcoin_relayer:sha-4b61560
+          ports:
+            - containerPort: 8600
+          env:
+            - name: TO_POLY_DISABLED
+              value: "true"
+            - name: MYSQL_DSN_TESTNET
+              valueFrom:
+                secretKeyRef:
+                  name: poly-starcoin-relayer-testnet-sercets
+                  key: MYSQL_DSN_TESTNET
+            - name: PRIVATE_KEY_b6d69dd
+              valueFrom:
+                secretKeyRef:
+                  name: poly-starcoin-relayer-testnet-sercets
+                  key: PRIVATE_KEY_b6d69dd
+            - name: PRIVATE_KEY_18351d3
+              valueFrom:
+                secretKeyRef:
+                  name: poly-starcoin-relayer-testnet-sercets
+                  key: PRIVATE_KEY_18351d3
+            - name: POLY_WALLET_PASSWORD
+              value: "123456"
+            - name: POLY_WALLET_FILE
+              value: "/etc/polynetwork/poly/wallet.dat"
+            - name: ETHEREUM_CLIENT_URL
+              valueFrom:
+                secretKeyRef:
+                  name: poly-starcoin-relayer-testnet-sercets
+                  key: ETHEREUM_CLIENT_URL
+            - name: ALERT_DISCORD_WEBHOOK_URL
+              valueFrom:
+                secretKeyRef:
+                  name: poly-starcoin-relayer-testnet-sercets
+                  key: ALERT_DISCORD_WEBHOOK_URL
+          volumeMounts:
+            - name: poly-wallet-file
+              mountPath: "/etc/polynetwork"
+              readOnly: true
 
       volumes:
-      - name: poly-wallet-file
-        secret:
-          secretName: poly-starcoin-relayer-testnet-sercets
-          items:
-          - key: POLY_WALLET_JSON
-            path: "poly/wallet.dat"
+        - name: poly-wallet-file
+          secret:
+            secretName: poly-starcoin-relayer-testnet-sercets
+            items:
+              - key: POLY_WALLET_JSON
+                path: "poly/wallet.dat"
