--- a/config-mainnet.json
+++ b/config-mainnet.json
@@ -18,7 +18,7 @@
     "GenesisAccountAddress": "0xe52552637c5897a2d499fbf08216f73e",
     "PrivateKeys": [
       {
-        "0xb6D69DD935EDf7f2054acF12eb884df8": "${PRIVATE_KEY_b6d69dd}"
+        "0xa7cdbbd23a489acac81b07fdecbacc25": "${PRIVATE_KEY_a7cdbbd}"
       }
     ],
     "BlockConfirmations": 6,
@@ -36,7 +36,7 @@
       },
       "SenderPrivateKeys": [
         {
-          "0x18351D311d32201149a4DF2A9fC2db8a": "${PRIVATE_KEY_18351d3}"
+          "0xda8671ce41ef1cca60a5f67c7bdd2e50": "${PRIVATE_KEY_da8671c}"
         }
       ]
     }
@@ -97,14 +97,14 @@
       "Ethereum": {
         "TreasuryType": "ETHEREUM",
         "EthereumConfig": {
-          "LockProxyContractAddress": "0xfd40451429251a6dd535c4bb86a7d894409e900f",
-          "EthereumClientURL": "${ETHEREUM_CLIENT_URL}"
+          "LockProxyContractAddress": "0x3ee764c95e9d2264de3717a4cb45bcd3c5f00035",
+          "EthereumClientURL": "${ETHEREUM_CLIENT_URL_MAINNET}"
         },
         "Tokens": {
           "STC": {
             "TokenId": "0xec8614B0a68786Dc7b452e088a75Cba4F68755b8",
             "ScalingFactor": "1000000000",
-            "OpeningBalance": "5000000000000000000"
+            "OpeningBalance": "1000000000000000000"
           },
           "ETH": {
             "TokenId": "0x0000000000000000000000000000000000000000",
@@ -120,7 +120,7 @@
       }
     },
     "AlertDiscordWebhookUrl": "${ALERT_DISCORD_WEBHOOK_URL}",
-    "AlertAlarmHeading": "# TEST Poly Bridge ALARM",
-    "AlertNotificationHeading": "# TEST Poly Bridge Notification"
+    "AlertAlarmHeading": "# Poly Bridge ALARM",
+    "AlertNotificationHeading": "# Poly Bridge Notification"
   }
 }
