--- a/kube/mainnet_poly_to_starcoin-relayer-deployment.yaml
+++ b/kube/mainnet_poly_to_starcoin-relayer-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mainnet-poly-to-starcoin-relayer
-          image: ghcr.io/elements-studio/poly_starcoin_relayer:sha-4b61560
+          image: ghcr.io/elements-studio/poly_starcoin_relayer:sha-d25b080
           ports:
             - containerPort: 8600
           env:
@@ -27,16 +27,16 @@ spec:
                 secretKeyRef:
                   name: poly-starcoin-relayer-mainnet-sercets
                   key: MYSQL_DSN_MAINNET
-            - name: PRIVATE_KEY_b6d69dd
+            - name: PRIVATE_KEY_a7cdbbd
               valueFrom:
                 secretKeyRef:
                   name: poly-starcoin-relayer-mainnet-sercets
-                  key: PRIVATE_KEY_b6d69dd
-            - name: PRIVATE_KEY_18351d3
+                  key: PRIVATE_KEY_a7cdbbd
+            - name: PRIVATE_KEY_da8671c
               valueFrom:
                 secretKeyRef:
                   name: poly-starcoin-relayer-mainnet-sercets
-                  key: PRIVATE_KEY_18351d3
+                  key: PRIVATE_KEY_da8671c
             - name: POLY_WALLET_PASSWORD
               value: "123456"
             - name: POLY_WALLET_FILE
